MyFirstIDEProject/src/objects/Interview_Candidate__c.object
<CustomObject>
    <description>Candidates who are applying for job position</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City where candidate lives</description>
        <inlineHelpText>City where candidate lives</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of residence of the candidate</description>
        <inlineHelpText>Country of residence of the candidate</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Current employer name of the candidate</description>
        <inlineHelpText>Current employer name of the candidate</inlineHelpText>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of the applicant/Candidate</description>
        <inlineHelpText>Status of the applicant/Candidate</inlineHelpText>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Education of the candidate</description>
        <inlineHelpText>Education of the candidate</inlineHelpText>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Id of the candidate</description>
        <externalId>true</externalId>
        <inlineHelpText>Email Id of the candidate</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>fax number of candidate</description>
        <inlineHelpText>fax number of candidate</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the candidate appying for job position</description>
        <externalId>true</externalId>
        <inlineHelpText>First name of the candidate appying for job position</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the candidate applying for job position</description>
        <externalId>true</externalId>
        <inlineHelpText>Last name of the candidate applying for job position</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>mobile number of the candidate</description>
        <inlineHelpText>mobile number of the candidate</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the candidate</description>
        <inlineHelpText>Phone number of the candidate</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>SSN of candidate</description>
        <inlineHelpText>SSN of candidate</inlineHelpText>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State of the candidate</description>
        <inlineHelpText>State of the candidate</inlineHelpText>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street address of the candidate applying</description>
        <inlineHelpText>Street address of the candidate applying</inlineHelpText>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Citizenship status of candidate</description>
        <inlineHelpText>Citizenship status of candidate</inlineHelpText>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visa required or not for new candidate</description>
        <inlineHelpText>Visa required or not for new candidate</inlineHelpText>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <description>number of years of experience</description>
        <inlineHelpText>number of years of experience</inlineHelpText>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip code of the address of the applicant or candidate</description>
        <inlineHelpText>Zip code of the address of the applicant or candidate</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Interview Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>